# crockpot-experiments

./: .container-extra.debian  .dockerignore  .gitignore  AGENTS.md  Dockerfile.runpod  README.md  dead_key_census_spec.md  pyproject.toml  requirements-runpod-cuda.txt
.github/workflows/: publish-runpod-image.yml
.pi/skills/reproducible-research/: SKILL.md
.pi/skills/runpod-usage/: SKILL.md
deadkeys/: README.md
deadkeys/common/: loading.py  spectra.py
deadkeys/scripts/: __init__.py  biography.py  census.py  phase1_6.py  phase1_7.py  phase2_runtime.py  plane_truncation.py
experiments/: README.md
experiments/dead-keys/: PHASE1_5_TASK.md  README.md  spec.md
experiments/dead-keys/deadkeys/: __init__.py
experiments/k-address-space/: CLOSING-NOTE.md  FINDINGS.md  NOTEBOOK.md  README.md  REPORT-M1.5.md  addendum-M1.5.md  addendum-M1.6.md  spec.md
experiments/k-address-space/artifacts/: m16_nope_20260723_manifest.json  (+2 more)
experiments/queryability/: README.md
experiments/rope-as-scaffold/: NOTEBOOK.md  README.md  RS1-spec.md  qwen3-nope-training.md
logs/runpod/: crockpot_workspace_tree_20260722T2026Z.txt
phase1/: PHASE1_5_TASK.md
phase1/common/: __init__.py  loading.py  rope.py  spectra.py
phase1/scripts/: census.py  phase1_5.py  phase2_runtime.py  plane_truncation.py  plots.py
queryability/: README.md
queryability/scripts/: weights.py
scripts/: cuda-python  cuda-run  nix-cpu-run  rocm-python  rocm-run  runpod-bring-up  runpod-persistent-cache-setup  watch-experiment-run
temp/repro-checklists/: 20260722-k-address-space-m15-v11-qwen3-cuda.md
(+20 files in other folders)
