[project]
name = "dead-keys-census"
version = "0.1.0"
description = "Phase 1 weights-only dead-key census"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.45",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "matplotlib>=3.8",
  "accelerate>=0.30",
  "datasets>=5.0.0",
]

[tool.uv]
package = false
