[project]
name = "dead-keys-census"
version = "0.1.0"
description = "Phase 1 weights-only dead-key census"
requires-python = ">=3.10,<3.12"
dependencies = [
  "torch==2.9.1+rocm6.3",
  "pytorch-triton-rocm==3.5.1 ; sys_platform == 'linux'",
  "transformers>=4.51.0",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "matplotlib>=3.8",
  "accelerate>=0.30",
  "datasets>=5.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
